# service/api/api-handler.go
@@ -16,15 +16,22 @@ func (rt *_router) Handler() http.Handler {
 	rt.router.GET("/users", rt.wrap(rt.bearerAuth(rt.listOfUsers))) // testato
 
 	// Chat operations
-	rt.router.GET("/chats", rt.wrap(rt.bearerAuth(rt.listOfChats)))           // testato
-	rt.router.POST("/chats", rt.wrap(rt.bearerAuth(rt.createChat)))           // testato
+	rt.router.GET("/chats", rt.wrap(rt.bearerAuth(rt.listOfChats))) // testato
+	rt.router.POST("/chats", rt.wrap(rt.bearerAuth(rt.createChat)))
 	rt.router.GET("/chats/:chatId", rt.wrap(rt.bearerAuth(rt.detailsChat)))   // testato
 	rt.router.DELETE("/chats/:chatId", rt.wrap(rt.bearerAuth(rt.deleteChat))) // testato
 
 	// Message Operations
 	rt.router.POST("/chats/:chatId/messages", rt.wrap(rt.bearerAuth(rt.sendMessage))) // testato
-	rt.router.GET("/chats/:chatId/messages/status", rt.wrap(rt.bearerAuth(rt.getAllMessages)))
-	rt.router.PUT("/chats/:chatId/messages/status/update", rt.wrap(rt.bearerAuth(rt.updateMessagesStatus)))
+	rt.router.DELETE("/chats/:chatId/messages/:messageId", rt.wrap(rt.bearerAuth(rt.deleteMessage)))
+	rt.router.GET("/chats/:chatId/messages/status", rt.wrap(rt.bearerAuth(rt.getAllMessages)))              // testato
+	rt.router.PUT("/chats/:chatId/messages/status/update", rt.wrap(rt.bearerAuth(rt.updateMessagesStatus))) // testato
+	rt.router.POST("/chats/:chatId/messages/:messageId/forward", rt.wrap(rt.bearerAuth(rt.forwardMessage)))
+	rt.router.POST("/chats/:chatId/messages/:messageId/reactions", rt.wrap(rt.bearerAuth(rt.reactToMessage)))
+	rt.router.DELETE("/chats/:chatId/messages/:messageId/reactions", rt.wrap(rt.bearerAuth(rt.deleteReaction)))
+	rt.router.GET("/chats/:chatId/messages/:messageId/reactions", rt.wrap(rt.bearerAuth(rt.getMessageReactions)))
+	rt.router.POST("/chats/:chatId/members", rt.wrap(rt.bearerAuth(rt.addMemberToGroup)))
 
 	return rt.router
+
 }
